# workshop06_auth

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: config.py  crud.py  db.py  deps.py  models.py  schemas.py  security.py
